# alpine-lang

./: CMakeLists.txt  main.cpp
scripts/: valgrind-alp-test.sh  valgrind-alp.sh
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
src/parser/: parser.cpp  parser.h  syntax_tree.cpp  syntax_tree.h
src/util/: log-util.h  set-util.h
test/: lexer_test.cpp  parser_test.cpp  syntax_tree_test.cpp  test.cpp
test/examples/: multi-line-misformat.alp  one-line.lex  one-token.lex
test/resources/: multi-line-padded.alp  multi-line-padded.lex  multi-line.alp
test/util/: test-util.h
